--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Cybersecurity Portfolio</h1>
+        <h1>Ebooth4</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,9 +23,6 @@
             <p>I am a cybersecurity professional with experience in protecting systems and networks from cyber threats. My portfolio showcases my skills and projects in this field.</p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 My Cybersecurity Portfolio</p>
-    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
