--- a/src/experience.html
+++ b/src/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience - Personal Portfolio</title>
+    <title>Experience</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,24 +19,33 @@
     </header>
     <main>
         <section>
-            <h2>Work Experience</h2>
+            <h2>Post-Grad Work Experience</h2>
+        </section>
+        <section>
             <article>
-                <h3>Company Name 1</h3>
-                <p><strong>Job Title:</strong> Cybersecurity Analyst</p>
-                <p><strong>Duration:</strong> January 2020 - Present</p>
-                <p><strong>Responsibilities:</strong> Monitoring security systems, conducting vulnerability assessments, and responding to incidents.</p>
-            </article>
-            <article>
-                <h3>Company Name 2</h3>
-                <p><strong>Job Title:</strong> Security Consultant</p>
-                <p><strong>Duration:</strong> June 2018 - December 2019</p>
-                <p><strong>Responsibilities:</strong> Advising clients on security best practices, performing risk assessments, and developing security policies.</p>
-            </article>
-            <article>
-                <h3>Company Name 3</h3>
-                <p><strong>Job Title:</strong> IT Support Specialist</p>
-                <p><strong>Duration:</strong> March 2016 - May 2018</p>
-                <p><strong>Responsibilities:</strong> Providing technical support, managing user accounts, and assisting with security training.</p>
+                <h3 class="obfuscated">Company</h3>
+                <p><strong>Job Title:</strong> Cybersecurity Engineer</p>
+                <p><strong>Duration:</strong> ~2 Years </p>
+                <p><strong>Responsibilities:</strong> Virtualize hardware elements, exploit development, and data analysis.</p>
+                <P> - Wrote C++ code that represented and functioned as a power pc CPU and FPGA.</P>
+                <p> - Debugged C++, Python, Java, and their respective executables</p>
+                <p> - Took part in CTFs and cybersecurity trainings centered around reverse engineering</p>
+                <p> - Assisted in penetration testing assesments</p>
+                <p> - Created reports for customers about cybersecurity risk and mitigation strategies</p>
+                <button class="open-modal" data-modal="work-modal">Learn More</button>
+                <div id="work-modal" class="modal">
+                    <div class="modal-content">
+                        <span class="close" data-modal="work-modal">&times;</span>
+                        <p>This was my first full-time position that I had taken after graduating from college. I started as a pure software developer tasked with virtualizing hardware components and how they acted.
+                            I took power pc firmware and manuals and created C++ classes that represented them in code. I was mainly in charge of working on timing and the interrupt controller of both the CPU and FPGA.
+                            I learned a lot about hardware and debugging memory addresses as well as reverse engineering real hardware firmware. After working on this I pivoted into more of a red teamer. I helped out with
+                            penetration test assessments and would help analyze the data that came from them. While continueing to work on the red team, I began assisting with cybersecurity risk studies and assessing systems for where they are vulnerable.
+                            We would learn as much as we could about the system and generate a report to the customer that showed how they were vulnerable and mitigation strategies.
+                        </p>
+                        <p>Throughout all of my time here I have been able to learn a <strong>TON</strong> about red teaming, software development in a large professonal setting, risk, and business development and I am excited to learn more.</p>
+
+                    </div>
+                </div>
             </article>
         </section>
     </main>
