--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cybersecurity Portfolio</title>
+    <title>Ebooth4</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -20,7 +20,17 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I am a cybersecurity professional with experience in protecting systems and networks from cyber threats. My portfolio showcases my skills and projects in this field.</p>
+            <p>I have a fascination for software reverse engineering, exploit development, and QoL scripting.</p>
+            <p>Learning Ghidra was the  opening act for my interest. I had taken a reverse engineering class in college, and I had only limited knowledge about the subject
+                and did not know what I was getting into. I was taken through the stages of learning what decompiled C code looks like, assembly code and how it works, and how to write scripts for ghidra to make my life easier.
+                Since then, I have improved my skills and begun working on RE as a career. Reversing firmware, network connections, and even using debugging / reading memory to assist in my assumptions has been a great learning experience.
+                I am excited to continue learning, refining my skills, and applying them to real world problems.
+            </p>
+            <h3>Certificates and Awards</h3>
+            <p> - B.S. Computer Science</p>
+            <p> - CompTIA Sec+</p>
+            <p> - Eagle Scout</p>
+            <p> - Working on exanding my certificate repertoire</p>
         </section>
     </main>
     <script src="js/scripts.js"></script>
