--- a/src/projects.html
+++ b/src/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Personal Portfolio</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,42 +19,47 @@
     </header>
     <main>
         <section>
-            <h2>Project Title 1</h2>
+            <h2>Atmosphere</h2>
             <button class="open-modal" data-modal="modal1">Learn More</button>
             <div id="modal1" class="modal">
                 <div class="modal-content">
                     <span class="close" data-modal="modal1">&times;</span>
-                    <p>Description of the project, highlighting the cybersecurity aspects and technologies used.</p>
-                    <a href="https://link-to-project1.com" target="_blank">View Project</a>
+                    <p>This was a school project during my junior year. I took part in a team of three people, including myself, and the assignment was to use three different api calls and create a website.
+                        My team was big into music, so we determined one of our api calls would be Spotify. We decided that we were going to make a website that would take a user's geographical data, location and time zone, and create a customized
+                        Spotify playlist based around those factors. We treated the morning and night as a more "chill" time and during these times it would create something more along the lines of a lo-fi playlist. The geographical data
+                        was used to include more songs from someones specific area. In Europe in the early evening, it would play more Eurobeats, and in the US midwest during the morning, it may play more laid back country songs.
+                        Our team placed first in a contest of about 40 teams.
+                    </p>
                 </div>
             </div>
         </section>
         <section>
-            <h2>Project Title 2</h2>
+            <h2>AR Art Curation</h2>
             <button class="open-modal" data-modal="modal2">Learn More</button>
             <div id="modal2" class="modal">
                 <div class="modal-content">
                     <span class="close" data-modal="modal2">&times;</span>
-                    <p>Description of the project, highlighting the cybersecurity aspects and technologies used.</p>
-                    <a href="https://link-to-project2.com" target="_blank">View Project</a>
+                    <p>This was my senior capstone project. We were a team of 4 computer science majors, and were tasked with developing a larger scale software project.
+                        We had access to a Hololens 2 headset and chose to make a project revolving around augmented reality. Our project was a solution for artists, who created three dimensional art, to have a platform that could show off their art pieces as they wished for them to be seen.
+                        There were two parts to our project, one was the website database that could have art uploaded to it or a Sketchfab account linked to it. Then it would link up with the software running on the Hololens 2 headset.
+                        Inside the headset would be a scene overlayed on the world around the user. The user could then select the art piece they wanted to view and place it somewhere in the world around them.
+                        They could resize, move, and rotate the art piece as they wished.
+                    </p>
                 </div>
             </div>
         </section>
         <section>
-            <h2>Project Title 3</h2>
+            <h2>This Website!</h2>
             <button class="open-modal" data-modal="modal3">Learn More</button>
             <div id="modal3" class="modal">
                 <div class="modal-content">
                     <span class="close" data-modal="modal3">&times;</span>
-                    <p>Description of the project, highlighting the cybersecurity aspects and technologies used.</p>
-                    <a href="https://link-to-project3.com" target="_blank">View Project</a>
+                    <p>I created this website so that I could have more space to talk and explain about my interests, projects, and experiences. I was always dissapointed with the fact that resumes limit how much information I can put out there, and now I can simply direct someone to a website and they can learn all about me!
+                        I really enjoy software development and this is a very nice side project to work on to scratch that itch.</p>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
